force-app/main/default/objects/MC4SF__MC_Interest_Group__c/fields/MC4SF__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Display_Order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>