force-app/main/default/objects/MC4SF__MC_Interest_Group__c/fields/MC4SF__Long_Name__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Long_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Long Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>