force-app/main/default/objects/MC4SF__MC_Interest_Group__c/fields/MC4SF__MailChimp_ID__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MailChimp_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MailChimp ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>